--- a/about.html
+++ b/about.html
@@ -29,7 +29,10 @@
                         Your bio here.
                     </p>
                     <p>
-                        Other stuff you want.
+    📞 123-456-7890</p>
+    <p>📧 val.mcaballero@gmail.com</p>
+    <p>📍 3535 Cahuenga Blvd W Unit 203<br>
+        Studio City CA, 90068
                     </p>
                 </div>
             </div>
