--- a/booking.html
+++ b/booking.html
@@ -18,30 +18,13 @@
 
     <main class="minimal-main">
         <section class="minimal-section">
-            <h1 class="page-title">Book</h1>
+            <h1 class="page-title">Book an Appointment</h1>
             
-            <form class="minimal-form">
-                <input type="text" name="name" placeholder="Name" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="tel" name="phone" placeholder="Phone" required>
-                <select name="service" required>
-                    <option value="">Select Service</option>
-                    <option value="facial">Facial</option>
-                    <option value="peel">Chemical Peel</option>
-                    <option value="microderm">Microdermabrasion</option>
-                    <option value="waxing">Waxing</option>
-                    <option value="anti-aging">Anti-Aging</option>
-                    <option value="acne">Acne Treatment</option>
-                </select>
-                <textarea name="message" placeholder="Message (optional)" rows="4"></textarea>
-                <button type="submit" class="cta-button">Send Request</button>
-            </form>
+            <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/josephfyang" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
 
-            <div class="contact-minimal">
-                <p>📞 [Your Phone]</p>
-                <p>📧 [Your Email]</p>
-                <p>📍 [Your Location]</p>
-            </div>
         </section>
     </main>
 
