--- a/about.html
+++ b/about.html
@@ -8,7 +8,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="page-header">
+    <!-- Top Bar -->
+    <div class="top-bar">
+        <div class="top-bar-content">
+            <a href="index.html" class="back-link">← Home</a>
+            <div class="top-bar-brand">
+                <img src="images/hummingbird.png" alt="Colibrí Esthetics" class="top-bar-logo">
+                <h2 class="top-bar-name">Colibrí Esthetics</h2>
+            </div>
+            <nav class="top-nav">
+                <a href="services.html" class="top-link">Services</a>
+                <a href="booking.html" class="top-link">Book</a>
+            </nav>
+        </div>
+    </div>
+
+    <header class="page-header" style="display: none;">
         <a href="index.html" class="back-link">← Home</a>
         <nav class="top-nav">
             <a href="services.html" class="top-link">Services</a>
@@ -30,7 +45,7 @@
                     </p>
                     <p>
     📞 123-456-7890</p>
-    <p>📧 val.mcaballero@gmail.com</p>
+    <p>📧 <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="cfb9aea3e1a2acaeadaea3a3aabda08fa8a2aea6a3e1aca0a2">[email&#160;protected]</a></p>
     <p>📍 3535 Cahuenga Blvd W Unit 203<br>
         Studio City CA, 90068
                     </p>
@@ -48,10 +63,4 @@
                 </div>
                 <div class="simple-card">
                     <h3>Products</h3>
-                    <p>Professional-grade, carefully selected</p>
-                </div>
-            </div>
-        </section>
-    </main>
-</body>
-</html>
+                    <p>Profe
