--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="landing-container">
         <div class="landing-content">
+            <img src="images/hummingbird.png" alt="Hummingbird" class="brand-logo">
             <h1 class="brand-name">Colibrí Esthetics</h1>
             <p class="brand-subtitle">by valerie</p>
             
