--- a/booking.html
+++ b/booking.html
@@ -8,7 +8,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="page-header">
+    <!-- Top Bar -->
+    <div class="top-bar">
+        <div class="top-bar-content">
+            <a href="index.html" class="back-link">← Home</a>
+            <div class="top-bar-brand">
+                <img src="images/hummingbird.png" alt="Colibrí Esthetics" class="top-bar-logo">
+                <h2 class="top-bar-name">Colibrí Esthetics</h2>
+            </div>
+            <nav class="top-nav">
+                <a href="about.html" class="top-link">About Me</a>
+                <a href="services.html" class="top-link">Services</a>
+            </nav>
+        </div>
+    </div>
+
+    <header class="page-header" style="display: none;">
         <a href="index.html" class="back-link">← Home</a>
         <nav class="top-nav">
             <a href="about.html" class="top-link">About Me</a>
