--- a/about.html
+++ b/about.html
@@ -43,9 +43,8 @@
                     <p>
                         Your bio here.
                     </p>
-                    <p>
-    📞 123-456-7890</p>
-    <p>📧 <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="cfb9aea3e1a2acaeadaea3a3aabda08fa8a2aea6a3e1aca0a2">[email&#160;protected]</a></p>
+                    <p>📞 123-456-7890</p>
+    <p>📧 val.cab@gmail.com</p>
     <p>📍 3535 Cahuenga Blvd W Unit 203<br>
         Studio City CA, 90068
                     </p>
