--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colibrí Esthetics - About Me</title>
+    <title>Colibrí Esthetic - About Me</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
@@ -13,8 +13,8 @@
         <div class="top-bar-content">
             <a href="index.html" class="back-link">← Home</a>
             <div class="top-bar-brand">
-                <img src="images/hummingbird.png" alt="Colibrí Esthetics" class="top-bar-logo">
-                <h2 class="top-bar-name">Colibrí Esthetics</h2>
+                <img src="images/hummingbird.png" alt="Colibrí Esthetic" class="top-bar-logo">
+                <h2 class="top-bar-name">Colibrí Esthetic</h2>
             </div>
             <nav class="top-nav">
                 <a href="services.html" class="top-link">Services</a>
@@ -41,10 +41,12 @@
                 </div>
                 <div class="about-text">
                     <p>
-                        Your bio here.
+                    ❤️ Hi there! ❤️</p>My name is Valerie and I am a licensed esthetician
+                    dedicated to helping clients feel confident in their skin through
+                    personalized, results-driven care. My approach combines gentle techniques, high-quality products,
+                    and a focus on long-term skin health in a welcoming, judgment-free environment.
                     </p>
-                    <p>📞 123-456-7890</p>
-    <p>📧 val.cab@gmail.com</p>
+    <p>📧 val.mcaballero@gmail.com</p>
     <p>📍 3535 Cahuenga Blvd W Unit 203<br>
         Studio City CA, 90068
                     </p>
@@ -54,12 +56,12 @@
             <div class="simple-grid">
                 <div class="simple-card">
                     <h3>Experience</h3>
-                    <p>[X] years specializing in [your focus areas]</p>
+                    <p>Certified Esthetician with 3 years of experience specializing in glow-ups!</p>
                 </div>
                 <div class="simple-card">
                     <h3>Approach</h3>
-                    <p>Personalized care tailored to your skin</p>
+                    <p>Every treatment is personalized to support long-term skin health while respecting the skin barrier.</p>
                 </div>
                 <div class="simple-card">
                     <h3>Products</h3>
-                    <p>Profe
+                    <p>Formulated, non-comedogenic, and cruelty-free products carefully selected per skin type.</p>
