--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colibrí Esthetics - Services</title>
+    <title>Colibrí Esthetic - Services</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
@@ -13,8 +13,8 @@
         <div class="top-bar-content">
             <a href="index.html" class="back-link">← Home</a>
             <div class="top-bar-brand">
-                <img src="images/hummingbird.png" alt="Colibrí Esthetics" class="top-bar-logo">
-                <h2 class="top-bar-name">Colibrí Esthetics</h2>
+                <img src="images/hummingbird.png" alt="Colibrí Esthetic" class="top-bar-logo">
+                <h2 class="top-bar-name">Colibrí Esthetic</h2>
             </div>
             <nav class="top-nav">
                 <a href="about.html" class="top-link">About Me</a>
@@ -38,7 +38,7 @@
             <div class="service-list">
                 <div class="service-item">
                     <div class="service-header">
-                        <h3>Keepin' It Simple     ~45 min</h3>
+                        <h3>Keepin' It Simple<p>~45 min</h3>
                         <span class="service-price">$60</span>
                     </div>
                     <div class="service-content">
@@ -55,9 +55,28 @@
                     </div>
                 </div>
 
+                            <div class="service-list">
                 <div class="service-item">
                     <div class="service-header">
-                        <h3>Peel to Perfection     ~75 min</h3>
+                        <h3>No Makeup Look: Lash Lift<p>~60 min</h3>
+                        <span class="service-price">$60</span>
+                    </div>
+                    <div class="service-content">
+                        <div class="service-image-container">
+                            <img src="images/servicelash.jpg" alt="No Makeup Look" class="service-image">
+                        </div>
+                        <ul class="service-details">
+                            <li>Enhances natural eye lashes</li>
+                            <li>Gentle Lifting Treatment</li>
+                            <li>Adds definition</li>
+                            <li>Perfect for low-maintenance, mascara-ready look</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="service-item">
+                    <div class="service-header">
+                        <h3>Peel to Perfection<p>~75 min</h3>
                         <span class="service-price">$130</span>
                     </div>
                     <div class="service-content">
@@ -73,7 +92,7 @@
 
                 <div class="service-item">
                     <div class="service-header">
-                        <h3>Skin Renewal: Needling Treatment     ~75 min</h3>
+                        <h3>Skin Renewal: Needling Treatment<p>~75 min</h3>
                         <span class="service-price">$225</span>
                     </div>
                     <div class="service-content">
@@ -90,7 +109,7 @@
 
                 <div class="service-item">
                     <div class="service-header">
-                        <h3>LED Light Therapy (service add-on)     ~20 min</h3>
+                        <h3>LED Light Therapy<p>(Optional Add-On)~20 min</h3>
                         <span class="service-price">$15</span>
                     </div>
                     <div class="service-content">
@@ -110,7 +129,7 @@
 
                 <div class="service-item">
                     <div class="service-header">
-                        <h3>Peel to Perfection (PACKAGE)     ~90 min</h3>
+                        <h3>Peel to Perfection (PACKAGE)<p>~90 min</h3>
                         <span class="service-price">$600</span>
                     </div>
                     <div class="service-content">
