--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colibrí Esthetics - Book</title>
+    <title>Colibrí Esthetic - Book</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
@@ -13,8 +13,8 @@
         <div class="top-bar-content">
             <a href="index.html" class="back-link">← Home</a>
             <div class="top-bar-brand">
-                <img src="images/hummingbird.png" alt="Colibrí Esthetics" class="top-bar-logo">
-                <h2 class="top-bar-name">Colibrí Esthetics</h2>
+                <img src="images/hummingbird.png" alt="Colibrí Esthetic" class="top-bar-logo">
+                <h2 class="top-bar-name">Colibrí Esthetic</h2>
             </div>
             <nav class="top-nav">
                 <a href="about.html" class="top-link">About Me</a>
