--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colibrí Esthetics - Home</title>
+    <title>Colibrí Esthetic - Home</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div class="landing-container">
         <div class="landing-content">
             <img src="images/hummingbird.png" alt="Hummingbird" class="brand-logo">
-            <h1 class="brand-name">Colibrí Esthetics</h1>
+            <h1 class="brand-name">Colibrí Esthetic</h1>
             <p class="brand-subtitle">by valerie</p>
             
             <nav class="minimal-nav">
